add content of bootstrap

--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
 <a href="http://mtn.co.ug"> <img src="picture.png" alt="mtn tweet">
 </a>
 <a href="https://twiter.com" target="_blank">twitter.com</a> but is inspired by <a href="#charles" </a></a>
+<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-danger">Danger</button>
 </body
 </html>
